<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2013 - 2016 Michiel van Loon
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">

    <string name="about_button">About TracClient</string>
    <string name="tracUser">Username</string>
    <string name="tracUserHint">Username</string>
    <string name="tracPw">Password</string>
    <string name="tracPwHint">Password</string>
    <string name="bewaren">Store credentials</string>
    <string name="vertext">Verify</string>
    <string name="invalidCred">Credentials not valid</string>
    <string name="validCred" tools:ignore="MissingTranslation">Credentials valid</string>
    <string name="list_heading">Ticket Listing</string>
    <string name="ophalen">Loading data</string>
    <string name="tlrefresh">Refresh list</string>
    <string name="dfrefresh">Refresh ticket</string>
    <string name="filter">Filter options</string>
    <string name="sort">Sort</string>
    <string name="changehost">Select another Trac host</string>
    <string name="updateticket">Modify status of ticket</string>
    <string name="nieuw">New ticket</string>
    <string name="nodata">No data</string>
    <string name="nodatadesc">Data of this ticket is not yet loaded</string>
    <string name="connerr">Connection error: %s</string>
    <string name="newtick">Create new ticket</string>
    <string name="oktext">OK</string>
    <string name="store">Store ticket</string>
    <string name="storerr">Error during create ticket</string>
    <string name="upderr" tools:ignore="MissingTranslation">Error during update ticket</string>
    <string name="storerrdesc">Cannot store ticket: %s</string>
    <string name="storok">Ticket created</string>
    <string name="storokdesc">Ticket created, id = %d</string>
    <string name="comment">Add comment</string>
    <string name="attach">Add attachment</string>
    <string name="chooser_title">Ticket attachment</string>
    <string name="tlshare">Share list</string>
    <string name="dfshare">Share ticket</string>
    <string name="updtick">Modify ticket</string>
    <string name="perfact">Perform action</string>
    <string name="storeupd">Store changes</string>
    <string name="cancel">Cancel</string>
    <string name="noticketUnk">No ticket created: unknown reason</string>
    <string name="invtick">Invalid ticketnumber</string>
    <string name="noaction">No action supplied</string>
    <string name="zoekfilter">Enter search string</string>
    <string name="zoek">Search</string>
    <string name="storefilter">Save filter</string>
    <string name="storesort">Save sort order</string>
    <string name="help">Help</string>
    <string name="sslHack">Accept Self Signed Certificates</string>
    <string name="select">Select</string>
    <string name="getlist" tools:ignore="MissingTranslation">Fetching Ticketlist\n%s</string>
    <string name="storeprofile">Save profile</string>
    <string name="profiletext">Enter name for the profile to be saved</string>
    <string name="loadprofile">Load login profile</string>
    <string name="loadprofiletext">Profile cannot be loaded: %s</string>
    <string name="notfound">Not found: %s</string>
    <string name="sdcardmissing">SDcard is missing. Cannot store attachment</string>
    <string name="ioerror">ExternalStorage - Error writing</string>
    <string name="chooseapp">Choose an application to open with:</string>
    <string name="notify">Notify</string>
    <string name="exportprofiles">Export profiles</string>
    <string name="importprofiles">Import profiles</string>
    <string name="completed">Completed</string>
    <string name="failed">Failed: %s</string>
    <string name="xmlwritecompleted">Export to XML succeeded</string>
    <string name="xmlreadcompleted">Import from XML succeeded</string>
    <string name="downloading">Downloading</string>
    <string name="uploading">Uploading</string>
    <string name="saveupdate">Saving update on server</string>
    <string name="saveticket">Saving ticket</string>
    <string name="selectticket">Select individual ticket</string>
    <string name="ticketnotfound">Ticket not found %s</string>
    <string name="chooseticknr">Enter ticketnumber</string>
    <string name="chooseticket">Choose ticket</string>
    <string name="checking">Checking</string>
    <string name="debug">Debug</string>
    <string name="foundnew" tools:ignore="MissingTranslation">Modified or new tickets found:</string>
    <string name="notifmod">Modified tickets found</string>
    <string name="tracLogin">Log in to TRAC server</string>
    <string name="notickets">No tickets found</string>
    <string name="nocomment">Cannot modify comment</string>
    <string name="notpossible">Not possible</string>
    <string name="notchange">You cannot modify this field</string>
    <string name="wrongdb">Wrong database</string>
    <string name="wrongdbtext" tools:ignore="MissingTranslation">Current database = %1$s\nRequested database = %2$s\nSelect the right database first</string>
    <string name="showempty">Show empty fields</string>
    <string name="unsaved">Leave screen and save changes?</string>
    <string name="nee">No</string>
    <string name="ja">Yes</string>
    <string name="hostnametitle" tools:ignore="MissingTranslation">Ignore Hostname verification?"</string>
    <string name="hostnametext" tools:ignore="MissingTranslation">Hostname verification failed when trying to connect to server.\nMessage = "</string>
    <string name="hostnameign" tools:ignore="MissingTranslation">\nIgnore the verification?</string>
    <string name="noJSON">No JSON support on the TRAC-server</string>
    <string name="cookies" tools:ignore="MissingTranslation">Cookies</string>
    <string name="cookieInform" tools:ignore="MissingTranslation">This app uses cookies from Google to deliver services, to personalize ads and analyze traffic. Information about your use of this app will be shared with Google. If you use this app, you agree to the use of cookies.</string>
    <string name="showchanges" tools:ignore="MissingTranslation">Change history</string>
    <string name="permissiontitle">Permission request</string>
    <string name="permissiontext" tools:ignore="MissingTranslation">This app needs to read and write the SD-card, this permission has not been granted yet to the app. If you choose not to grant this permission it will not be possible to import or export profiles or to attach files from the SD-card. If in doubt don\'t check the “Do not ask again” checkbox in the next dialog.</string>

    <string-array name="filter_names" tools:ignore="MissingTranslation">
        <item>is equal to</item>
        <item>is not equal to</item>
        <item>contains</item>
        <item>does not contain</item>
        <item>starts with</item>
        <item>does not start with</item>
        <item>ends on</item>
        <item>does not end on</item>
    </string-array>
    <string name="doubleback">Please click BACK again to exit</string>
    <string name="chooseoption">Choose option</string>
    <string name="choosefield">Choose field</string>
    <string name="tryinterrupt" tools:ignore="MissingTranslation">Trying to interrupt ticketlist loading</string>
    <string name="interrupted" tools:ignore="MissingTranslation">Ticketload interrupted</string>

    <string name="navigation_drawer_open" tools:ignore="MissingTranslation">Open navigation drawer</string>
    <string name="navigation_drawer_close" tools:ignore="MissingTranslation">Close navigation drawer</string>
    <string name="prefNrItems" tools:ignore="MissingTranslation">Batchsize loading tickets</string>
    <string name="filtersumm" tools:ignore="MissingTranslation">Specify filter options</string>
    <string name="sortsumm" tools:ignore="MissingTranslation">Specify sortorder</string>
    <string name="generalsettings" tools:ignore="MissingTranslation">General settings</string>
    <string name="settings" tools:ignore="MissingTranslation">Settings</string>
    <string name="trachost" tools:ignore="MissingTranslation">Trac Host</string>
    <string name="tickethead" tools:ignore="MissingTranslation">Ticket %d</string>
    <string name="failexport">Export to file failed</string>
</resources>
