<?xml version="1.0" encoding="utf-8"?><!--
 * Copyright (C) 2013,2014 Michiel van Loon
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.

-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:support="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AppCompatResource">
    <item
        android:id="@+id/tlnieuw"
        android:icon="@android:drawable/ic_menu_add"
        android:menuCategory="container"
        android:title="@string/nieuw" />
    <item
        android:id="@+id/tlchangehost"
        android:menuCategory="container"
        android:title="@string/changehost" />
    <item
        android:id="@+id/tlrefresh"
        android:icon="@android:drawable/ic_popup_sync"
        android:menuCategory="container"
        android:title="@string/tlrefresh"
        support:showAsAction="ifRoom" />
    <item
        android:id="@+id/tlshare"
        android:icon="@android:drawable/ic_menu_share"
        android:menuCategory="container"
        android:title="@string/tlshare"
        support:showAsAction="ifRoom" />
    <item
        android:id="@+id/tlzoek"
        android:icon="@drawable/search"
        android:menuCategory="container"
        android:title="@string/zoek"
        android:visibility="gone"
        support:showAsAction="ifRoom" />
    <!--item
        android:id="@+id/tlfilter"
        android:menuCategory="container"
        android:title="@string/filter" />
    <item
        android:id="@+id/tlsort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:menuCategory="container"
        android:title="@string/sort" / -->
    <item
        android:id="@+id/tlselect"
        android:menuCategory="container"
        android:title="@string/selectticket" />
    <item
        android:id="@+id/settings"
        android:menuCategory="container"
        android:title="@string/settings" />

</menu> 
