<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2013 - 2016 Michiel van Loon
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:support="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:ignore="AppCompatResource">

    <item
        android:id="@+id/dfrefresh"
        android:icon="@android:drawable/ic_popup_sync"
        android:menuCategory="container"
        android:title="@string/dfrefresh"
        support:showAsAction="ifRoom"/>
    <item
        android:id="@+id/dfempty"
        android:checkable="true"
        android:checked="false"
        android:menuCategory="container"
        android:title="@string/showempty"/>
    <item
        android:id="@+id/dfshare"
        android:icon="@android:drawable/ic_menu_share"
        android:menuCategory="container"
        android:title="@string/dfshare"
        support:showAsAction="ifRoom"/>
    <item
        android:id="@+id/dfattach"
        android:icon="@drawable/content_new_attachment"
        android:menuCategory="container"
        android:title="@string/attach"
        support:showAsAction="ifRoom"/>
    <item
        android:id="@+id/dfupdate"
        android:icon="@android:drawable/ic_menu_edit"
        android:menuCategory="container"
        android:title="@string/updateticket"
        support:showAsAction="ifRoom"/>
    <item
        android:id="@+id/dfselect"
        android:menuCategory="container"
        android:title="@string/selectticket"/>

</menu>
