<?xml version="1.0" encoding="utf-8"?><!--
 * Copyright (C) 2013,2014 Michiel van Loon
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.

-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
	  xmlns:support="http://schemas.android.com/apk/res-auto"
      tools:ignore="AppCompatResource">
    <item
        android:id="@+id/help"
        android:icon="@android:drawable/ic_menu_help"
        android:menuCategory="container"
        android:orderInCategory="9997"
        support:showAsAction="ifRoom"
        android:title="@string/help"/>
    <item
        android:id="@+id/over"
        android:icon="@android:drawable/ic_menu_info_details"
        android:menuCategory="container"
        android:orderInCategory="9998"
        support:showAsAction="ifRoom"
        android:title="@string/about_button"/>
    <item
        android:id="@+id/debug"
        android:enabled="false"
        android:menuCategory="container"
        android:orderInCategory="9999"
        android:title="@string/debug"
        android:visible="false"/>

</menu>
