<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2013 - 2016 Michiel van Loon
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->ew xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/half_padding"
            android:text="@string/updtick"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_margin"
                android:padding="@dimen/half_padding"
                android:text="@string/perfact"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/actionblock"
                    style="@style/ActionBlock"/>

                <LinearLayout style="@style/OptionsBlock">

                    <TextView
                        android:id="@+id/explaintxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/half_margin"
                        android:padding="@dimen/std_padding"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>

                    <EditText
                        android:id="@+id/optieval"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/half_margin"
                        android:inputType="text"
                        android:padding="@dimen/std_padding"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>

                    <Spinner
                        android:id="@+id/opties"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/half_margin"
                        android:padding="@dimen/std_padding"
                        android:prompt="@string/chooseoption"
                        android:spinnerMode="dialog"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/half_margin"
                android:layout_weight="1"
                android:padding="@dimen/half_padding"
                android:text="@string/comment"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_margin"
                android:layout_weight="1"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLines="6"
                android:minLines="1"
                android:padding="@dimen/std_padding"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/updNotify"
            style="@style/CheckBox"
            android:text="@string/notify"/>

        <LinearLayout style="@style/ButtonHolder">

            <Button style="@style/CancelButton"/>

            <Button
                android:id="@+id/storeUpdate"
                style="@style/NormalButton"
                android:text="@string/storeupd"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
