<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2013 - 2016 Michiel van Loon
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->yout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:id="@+id/ticknr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/ophalen"
        android:textSize="@dimen/list_textsize"/>

    <LinearLayout
        android:id="@+id/modveld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button style="@style/CancelButton"/>

            <Button
                android:id="@+id/updBut"
                style="@style/NormalButton"
                android:text="@string/updtick"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/updNotify"
            style="@style/CheckBox"
            android:text="@string/notify"/>
    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout style="@style/SwipeContainer">

        <ListView
            android:id="@+id/listofFields"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/list_textsize"/>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>
